@@ -1,3 +1,0 @@
-// 1.21.1	2025-02-28T17:55:59.4175857	Data Maps
-ac68a4877ae314e9f369f186d0363f798212e9b8 data/neoforge/data_maps/item/compostables.json
-a828e289cd684b069e001809dfb79f52e0776bc6 data/neoforge/data_maps/item/furnace_fuels.json
