@@ -1,10 +1,10 @@
 {
   "type": "minecraft:stonecutting",
   "ingredient": {
-    "item": "bygone:polished_byslate_stairs"
+    "item": "bygone:polished_byslate"
   },
   "result": {
     "count": 1,
-    "id": "bygone:polished_byslate"
+    "id": "bygone:polished_byslate_stairs"
   }
 }
