@@ -1,10 +1,10 @@
 {
   "type": "minecraft:stonecutting",
   "ingredient": {
-    "item": "bygone:polished_bystone_wall"
+    "item": "bygone:polished_bystone"
   },
   "result": {
     "count": 1,
-    "id": "bygone:polished_bystone"
+    "id": "bygone:polished_bystone_wall"
   }
 }
