@@ -24,25 +24,14 @@ public class BygoneRecipeProvider extends RecipeProvider {
         this.BricksRecipe(exporter, BGBlocks.POLISHED_BYSTONE.get(), BGBlocks.POLISHED_BYSTONE_BRICK.get());
         this.BricksRecipe(exporter, BGBlocks.POLISHED_BYSTONE_BRICK.get(), BGBlocks.POLISHED_BYSTONE_SHINGLES.get());
         
-        this.SlabRecipe(exporter, BGBlocks.POLISHED_BYSTONE.get(), BGBlocks.POLISHED_BYSTONE_SLAB.get());
-        this.StairsRecipe(exporter, BGBlocks.POLISHED_BYSTONE.get(), BGBlocks.POLISHED_BYSTONE_STAIRS.get());
-        this.WallsRecipe(exporter, BGBlocks.POLISHED_BYSTONE.get(), BGBlocks.POLISHED_BYSTONE_WALL.get());
+        //this.SlabRecipe(exporter, BGBlocks.BYSTONE.get(), BGBlocks.BYSTONE_SLAB.get());
+        //this.StairsRecipe(exporter, BGBlocks.BYSTONE.get(), BGBlocks.BYSTONE_STAIRS.get());
+        //this.WallsRecipe(exporter, BGBlocks.BYSTONE.get(), BGBlocks.BYSTONE_WALL.get());
 
         this.SlabRecipe(exporter, BGBlocks.POLISHED_BYSTONE_BRICK.get(), BGBlocks.POLISHED_BYSTONE_BRICK_SLAB.get());
         this.StairsRecipe(exporter, BGBlocks.POLISHED_BYSTONE_BRICK.get(), BGBlocks.POLISHED_BYSTONE_BRICK_STAIRS.get());
         this.WallsRecipe(exporter, BGBlocks.POLISHED_BYSTONE_BRICK.get(), BGBlocks.POLISHED_BYSTONE_BRICK_WALL.get());
 
-        this.BricksRecipe(exporter, BGBlocks.BYSLATE.get(), BGBlocks.POLISHED_BYSLATE.get());
-        this.BricksRecipe(exporter, BGBlocks.POLISHED_BYSLATE.get(), BGBlocks.POLISHED_BYSLATE_BRICK.get());
-        this.BricksRecipe(exporter, BGBlocks.POLISHED_BYSLATE_BRICK.get(), BGBlocks.POLISHED_BYSLATE_SHINGLES.get());
-
-        this.SlabRecipe(exporter, BGBlocks.POLISHED_BYSLATE.get(), BGBlocks.POLISHED_BYSLATE_SLAB.get());
-        this.StairsRecipe(exporter, BGBlocks.POLISHED_BYSLATE.get(), BGBlocks.POLISHED_BYSLATE_STAIRS.get());
-        this.WallsRecipe(exporter, BGBlocks.POLISHED_BYSLATE.get(), BGBlocks.POLISHED_BYSLATE_WALL.get());
-
-        this.SlabRecipe(exporter, BGBlocks.POLISHED_BYSLATE_BRICK.get(), BGBlocks.POLISHED_BYSLATE_BRICK_SLAB.get());
-        this.StairsRecipe(exporter, BGBlocks.POLISHED_BYSLATE_BRICK.get(), BGBlocks.POLISHED_BYSLATE_BRICK_STAIRS.get());
-        this.WallsRecipe(exporter, BGBlocks.POLISHED_BYSLATE_BRICK.get(), BGBlocks.POLISHED_BYSLATE_BRICK_WALL.get());
 
         RecipeProvider.stonecutterResultFromBase(exporter, RecipeCategory.BUILDING_BLOCKS, BGBlocks.BYSTONE.get(), BGBlocks.POLISHED_BYSTONE.get(), 1);
         RecipeProvider.stonecutterResultFromBase(exporter, RecipeCategory.BUILDING_BLOCKS, BGBlocks.POLISHED_BYSTONE.get(), BGBlocks.POLISHED_BYSTONE_SLAB.get(), 2);
